# cugsplat

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEV.md  apis.html  build.sh  formatter.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: apis.doctree  environment.pickle  index.doctree
.doctrees/api/: cugsplat_fisheye.doctree  cugsplat_ghq.doctree  cugsplat_orthogonal.doctree  cugsplat_pinhole.doctree  cugsplat_shutter.doctree  cugsplat_ut.doctree  curend_fisheye.doctree  curend_ghq.doctree  curend_orthogonal.doctree  curend_pinhole.doctree  curend_shutter.doctree  curend_ut.doctree  tinyrend_camera_fisheye.doctree  tinyrend_camera_orthogonal.doctree  tinyrend_camera_pinhole.doctree  tinyrend_camera_shutter.doctree  tinyrend_fisheye.doctree  tinyrend_ghq.doctree  tinyrend_orthogonal.doctree  tinyrend_pinhole.doctree  tinyrend_shutter.doctree  tinyrend_ut.doctree
.github/workflows/: docs.yml  tests.yml
_include/: gaussian.h  impl.h  kernel_launcher.cuh
_sources/: apis.rst.txt  index.rst.txt
_sources/api/: cugsplat_fisheye.rst.txt  cugsplat_ghq.rst.txt  cugsplat_orthogonal.rst.txt  cugsplat_pinhole.rst.txt  cugsplat_shutter.rst.txt  cugsplat_ut.rst.txt  curend_fisheye.rst.txt  curend_ghq.rst.txt  curend_orthogonal.rst.txt  curend_pinhole.rst.txt  curend_shutter.rst.txt  curend_ut.rst.txt  tinyrend_camera_fisheye.rst.txt  tinyrend_camera_orthogonal.rst.txt  tinyrend_camera_pinhole.rst.txt  tinyrend_camera_shutter.rst.txt  tinyrend_fisheye.rst.txt  tinyrend_ghq.rst.txt  tinyrend_ut.rst.txt
_tests/: cholesky3x3.h  fisheye_hess.py  helpers.cuh  helpers.h  impl.cpp  radius.py  rasterization.cu
_tests/camera/: orthogonal.cpp  pinhole.cpp  shutter.cpp
_tests/core/: math.cpp
_tests/estimator/: ut.cpp
api/: cugsplat_fisheye.html  cugsplat_ghq.html  cugsplat_orthogonal.html  cugsplat_pinhole.html  cugsplat_shutter.html  cugsplat_ut.html  curend_fisheye.html  curend_ghq.html  curend_orthogonal.html  curend_pinhole.html  curend_shutter.html  curend_ut.html  tinyrend_camera_fisheye.html  tinyrend_camera_orthogonal.html  tinyrend_camera_pinhole.html  tinyrend_camera_shutter.html  tinyrend_fisheye.html  tinyrend_ghq.html  tinyrend_orthogonal.html  tinyrend_pinhole.html  tinyrend_shutter.html  tinyrend_ut.html
bindings/tinyrend/: _backend.py  bindings.cpp  test.py
bindings/torch/cugsplat/: _backend.py  bindings.cpp  test.py
bindings/torch/curend/: _backend.py  bindings.cpp
bindings/torch/tinyrend/: _backend.py  bindings.cpp  test.py
cugsplat/gaussian/: types.cuh
cugsplat/gravyard/camera/: model.h  opencv_fisheye.h  opencv_pinhole.h  orthogonal.h
cugsplat/gravyard/gaussian/: utils.h
cugsplat/gravyard/tests/: test_cholesky3x3.cpp
cugsplat/gravyard/utils/: cholesky3x3.h
cugsplat/include/: gaussian.h
cugsplat/include/camera/: fisheye.h  orthogonal.h  pinhole.h  shutter.h
cugsplat/include/core/: cholesky3x3.h  macros.h  math.h  se3.h  solver.h
cugsplat/include/estimator/: ghf.h  hermgauss.h
cugsplat/kernels/: _gravyard.cuh  preprocess.cuh  preprocess_eval_2dgs.cuh  preprocess_eval_3dgs.cuh  preprocess_to_2dgs.cuh  preprocess_to_image.cuh
cugsplat/preprocess/: kernel.cuh  util.cuh
cugsplat/preprocess/camera/: simple_pinhole_ewa.cuh
cugsplat/preprocess/primitive_in/: world3dgs.cuh  world_gaussian3d.cuh
cugsplat/preprocess/primitive_out/: image2dgs.cuh  image_gaussian2d.cuh  world2dgs.cuh  world3dgs.cuh  world_gaussian2d.cuh  world_gaussian3d.cuh
cugsplat/util/: macros.cuh
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: apis.rst  conf.py  generate_api_docs.py  index.rst
docs/source/api/: cugsplat_fisheye.rst  cugsplat_ghf.rst  cugsplat_orthogonal.rst  cugsplat_pinhhole.rst  cugsplat_pinhole.rst  cugsplat_shutter.rst  fisheye.rst
examples/: bindings.cpp  test.py
gsplat/camera/: model.h
gsplat/common/: macros.h  types.h
gsplat/device/: kernels.cuh  warps.cuh
gsplat/device/camera/: simple_pinhole_ewa.cuh
gsplat/device/primitive_in/: world3dgs.cuh
gsplat/device/primitive_out/: image2dgs.cuh  world2dgs.cuh
gsplat/gravyard/camera/: model.h  opencv_fisheye.h  opencv_pinhole.h  orthogonal.h
gsplat/gravyard/core/: tensor.h  types.h
gsplat/gravyard/gaussian/: primitive.h  utils.h
gsplat/gravyard/projection/: kernel.cuh
gsplat/gravyard/tests/: glm_tensor.h  test_cholesky3x3.cpp
gsplat/gravyard/utils/: cholesky3x3.h  pybind11_glm.h  warps.cuh
gsplat/include/camera/: fisheye.h  model.h  opencv_fisheye.h  opencv_pinhole.h  orthogonal.h  shutter.h
gsplat/include/camera2/: fisheye.h  shutter.h
gsplat/include/core/: macros.h  math.h  se3.h  solver.h  tensor.h  types.h
gsplat/include/device/: common.cuh
gsplat/include/gaussian/: primitive.h  transform.h  utils.h
gsplat/include/primitive/: gaussian.h
gsplat/include/projection/: image2dgs.h  kernel.cuh
gsplat/include/utils/: camera_model.h  camera_projection.h  cholesky3x3.h  gaussian.h  math.h  se3.h  solver.h  transform.h  types.h
gsplat/math/: cholesky3x3.h  gaussian.h  solver.h
gsplat/preprocess/: kernel.cuh  util.cuh
gsplat/pybind11_etx/: glm.h
gsplat/utils/: cholesky3x3.h  gaussian.h  transform.h
include/cugsplat/: gaussian.h  impl.h  kernel_launcher.cuh
include/curend/: gaussian.h  impl.h  kernel_launcher.cuh
include/gaussian/: utils.h
include/gravyard/: kernel.cuh  rasterization.cu  simple_gaussian.cuh
include/tinyrend/: gaussian.h  impl.h  rasterization.cuh
launcher/tinyrend/: launcher.h
scripts/: README.md  pre-commit  setup-git-hooks.sh
tests/: basic.cu  glm_tensor.h  helpers.cuh  helpers.h  impl.cpp  radius.py  rasterization.cu  rasterization2.cu  stb_image_write.h  test_cholesky3x3.cpp
tests/camera/: fisheye.cpp  model.cpp  opencv_pinhole.cpp  orthogonal.cpp  pinhole.cpp  shutter.cpp
tests/common/: mat.cpp  math.cpp  math_cuda.cu  quat.cpp  vec.cpp
tests/core/: math.cpp  se3.cpp  solver.cpp  tensor.cu
tests/estimator/: ghf.cpp  ghq.cpp  ut.cpp
tests/gaussian/: utils.cpp
tests/rasterization/: planner.cu
tests/util/: se3.cpp  solver.cpp
(+116 files in other folders)
